--- a/config/database.yml
+++ b/config/database.yml
@@ -13,8 +13,7 @@ default: &default
 development:
   <<: *default
   database: telegram-auction_development
-  username: postgres
-  password: postgres
+  username: ivan
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
