--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,6 @@
 
 # Ignore Byebug command history file.
 .byebug_history
-/config/database.yml
-/config/secrets.yml
+/config/database.yaml
+/config/secrets.yaml
 /public/uploads
