--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -26,3 +26,6 @@ test:
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   registration_code: vbudorr8934Jpdfm
+  telegram:
+    bot:
+      token: 287792996:AAEkvHSISrFSPXe_ZBEY4b0aPqB_3VKhh5o
